office/dashboard-ingress.yaml
kind: List
apiVersion: v1
items:

- apiVersion: v1
  kind: Secret
  metadata:
    namespace: kube-system
    name: intparcelfuturecom
  data:
    ca.crt: ""
    tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZlVENDQkdHZ0F3SUJBZ0lTQTR1ZVlZTmhGK3NubVp5YTVnNmlXckZTTUEwR0NTcUdTSWIzRFFFQkN3VUEKTUVveEN6QUpCZ05WQkFZVEFsVlRNUll3RkFZRFZRUUtFdzFNWlhRbmN5QkZibU55ZVhCME1TTXdJUVlEVlFRRApFeHBNWlhRbmN5QkZibU55ZVhCMElFRjFkR2h2Y21sMGVTQllNekFlRncweE9UQTFNamt3T1RReU16ZGFGdzB4Ck9UQTRNamN3T1RReU16ZGFNQ0V4SHpBZEJnTlZCQU1NRmlvdWFXNTBMbkJoY21ObGJHWjFkSFZ5WlM1amIyMHcKZ2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRQy9rUjJBZDg0dmdlTXp2L1YzK2pYTgpNYUsvbzlPZFBVTzd [...]
    tls.key: LS0tLS1CRUdJTiBSU0EgUFJJVkFURSBLRVktLS0tLQpNSUlFcFFJQkFBS0NBUUVBdjVFZGdIZk9MNEhqTTcvMWQvbzF6VEdpdjZQVG5UMUR1NEhlSzQ5aVpWWFVoWXRJCmZlS1MzWFpuZWREaTBoWmVVUEplRDYzK28vR0hyUUErVkFqdGZxRFU0bkVXb3NaWDRKZ2Z4a2YxdWJuRzNMV1YKM3E5dFM0QTA3enh0UWNqQkZXdXFkNVJaZFpoa3lxOXdnZUozMkpxT1MyWnZqUHFlc1l4eXFuMlRVVlAvY3gzagozV0tVNFVxRjlnemVhcHF0anVDTnltcE1uc3VUUzlYTGZOUnhqaGdpYmlsb25UTHlmZURyY05kOXRlaTRSZWhSCnppenM0MlFvbEV4czd0TG9tU2h1WGNTU2EzNFdUYU9FUDBsemx1aStJckRPMEtrdlF6U2NRL3dOb3gzbW5OYjUKQ3VOMFpRdkt [...]
  type: kubernetes.io/tls

- apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    namespace: kube-system
    name: dashboard
    annotations:
      nginx.ingress.kubernetes.io/ingress.class: nginx
      nginx.ingress.kubernetes.io/secure-backends: "true"
      nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  spec:
    tls:
    - hosts:
      - dashboard.int.parcelfuture.com
      secretName: intparcelfuturecom
    rules:
      - host: dashboard.int.parcelfuture.com
        http:
          paths:
          - path: /dashboard
            backend:
              serviceName: kubernetes-dashboard
              servicePort: 443
